network/base/namespaces.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: hass
  labels:
    name: hass
---
kind: Namespace
apiVersion: v1
metadata:
  name: monitoring
  labels:
    name: monitoring 
---
kind: Namespace
apiVersion: v1
metadata:
  name: shared
  labels:
    name: shared
---
kind: Namespace
apiVersion: v1
metadata:
  name: dev
  labels:
    name: dev
---
kind: Namespace
apiVersion: v1
metadata:
  name: argocd
  labels:
    name: argocd
---
kind: Namespace
apiVersion: v1
metadata:
  name: common
  labels:
    name: common
---
kind: Namespace
apiVersion: v1
metadata:
  name: ai
  labels:
    name: ai
---
kind: Namespace
apiVersion: v1
metadata:
  name: reloader
  labels:
    name: reloader
---
kind: Namespace
apiVersion: v1
metadata:
  name: longhorn-system
  labels:
    name: longhorn-system 
---
kind: Namespace
apiVersion: v1
metadata:
  name: external-storage
  labels:
    name: external-storage
---
kind: Namespace
apiVersion: v1
metadata:
  name: auth
  labels:
    name: auth
---
kind: Namespace
apiVersion: v1
metadata:
  name: openclaw
  labels:
    name: openclaw
